# yt-dlp-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Containerfile  LICENSE  README.md  compose.yml  config.example.toml  pyproject.toml  qualirs.toml
.github/workflows/: rust.yml
docs/: configuration.md  deployment.md  http-api.md  metadata-and-cleanup.md  python-client.md  running.md  tasks.md
examples/: python_client.py
src/: api.rs  config.rs  downloader.rs  jobs.rs  main.rs  platforms.rs  state.rs  storage.rs  templates.rs  types.rs  util.rs
