[package]
name = "yt-dlp-server"
version = "0.1.0"
edition = "2024"
authors = ["Yehor Smoliakov <egorsmkv@gmail.com>"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
async-channel = "2.5.0"
axum = "0.8.7"
clap = { version = "4.5", features = ["derive"] }
hmac = "0.12.1"
log = "0.4.28"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
